# server_frame

./: .gitignore  CMakeLists.txt  README.md  cpp命名规范.txt
depend/: install_env.sh  lua-5.4.2.tar
doc/: 常规服务器热切换.txt  棋牌类游戏服务器架构.docx
include/: svrlib.h
include/aoi/: quad_tree.hpp  rect.hpp  scene.h  vec2.hpp
include/astar/: astar.h  blockallocator.h
include/config/: config.h  csvreader.h
include/crypt/: aes.h  base64.hpp  blowfish.h  mars.h  md5.h  net_encrypt.h  serpent.h  url_encode.h  xor256.h
include/dbmysql/: db_task.h  db_wrap.h  dbmysql.h  sql_join.h
include/ebus/: event_bus.hpp  frame_event.hpp
include/file/: directory.hpp  file.hpp  filehelper.h
include/framework/: application.h
include/fundamental/: common.h  cyclebuffer.h  cyclebuffer_shm.h  hashtable.h  hashval.h  linkcache.h  multiprocesshashtable.h  ring_buff.h  variablehashtable.h  variablelengthhashtable.h
include/helper/: bufferStream.h  fileStream.h  helper.h  streamBase.h  stringStream.h
include/lua_service/: lua_bind.h  lua_service.h
include/math/: box2.h  math_functions.h  point2.h  point3.h  random.hpp  rank.h  rect.h  zset.hpp
include/memory/: ipcutility.h  memory_pool.h  memory_pools.h  object_pool.hpp  shm_cache_mgr.h
include/network/: byte_buffer.h  message_head.h  tcp_callbacks.h  tcp_client.h  tcp_conn.h  tcp_server.h
include/packet/: inner_protobuf_pkg.h  protobuf_handle.h  protobuf_pkg.h
include/redisclient/: config.h  pipeline.h  redis_client_wrap.h  redisasyncclient.h  redisbuffer.h  redisparser.h  redissyncclient.h  redisvalue.h
include/redisclient/impl/: pipeline.cpp  redisasyncclient.cpp  redisclientimpl.cpp  redisclientimpl.h  redissyncclient.cpp  redisvalue.cpp  throwerror.h
include/string/: string.hpp  string_functions.h  stringutility.h
include/third/lua/: luaconf.h
include/third/nlohmann/: json_wrap.h
include/third/timer/: timer_wheel.h
include/third/tinyxml/: tinyxml2.h
include/thread/: locked_queue.h  rwlock.hpp  spinlock.hpp  sync_queue.hpp  thread_pool.h
include/time/: cooling.h  time.hpp
include/utility/: basic_functions.h  basic_types.h  comm_macro.h  noncopyable.hpp  profile_manager.h  puid.hpp  singleton.h
src/astar/: astar.cpp  blockallocator.cpp
src/config/: csvreader.cpp
src/crypt/: aes.cpp  blowFish.cpp  mars.cpp  md5.cpp  net_encrypt.cpp  serpent.cpp  sha1.cc  url_encode.cpp
src/dbmysql/: db_task.cpp  db_wrap.cpp  dbmysql.cpp  dbmysql_exception.cpp  dbmysql_result.cpp  dbmysql_statement.cpp  dbmysql_transaction.cpp  test_client.cpp
src/ebus/: event_bus.cpp
src/framework/: cmdline.h  exception.cpp  framework.cpp  framework.h  frameworkmain.cpp
src/helper/: bufferStream.cpp  fileStream.cpp  filehelper.cpp  helper.cpp  streamBase.cpp  stringStream.cpp
src/lua_service/: lua_bind.cpp  lua_service.cpp
src/math/: math_functions.cpp
src/memory/: ipcutility.cpp  memory_block.cpp  memory_pool.cpp  memory_pools.cpp
src/modern/: json_wrap.cpp
src/network/: tcp_callbacks.cpp  tcp_client.cc  tcp_conn.cc  tcp_server.cc
src/redisclient/: redis_client_wrap.cpp
src/string/: string_functions.cpp  stringutility.cpp
src/third/tinyxml/: tinyxml2.cpp
src/time/: cooling.cpp
src/utility/: basic_functions.cpp  profile_manager.cpp
