cmake_minimum_required(VERSION 3.14)
project(server_frame)

set(CMAKE_CXX_STANDARD 17)

include_directories(include)
include_directories(include/aoi)
include_directories(include/astar)
include_directories(include/config)
include_directories(include/crypt)
include_directories(include/dbmysql)
include_directories(include/ebus)
include_directories(include/file)
include_directories(include/framework)
include_directories(include/fundamental)
include_directories(include/helper)
include_directories(include/lua_service)
include_directories(include/math)
include_directories(include/memory)
include_directories(include/network)
include_directories(include/packet)
include_directories(include/redisclient)
include_directories(include/redisclient/impl)
include_directories(include/string)
include_directories(include/third)
include_directories(include/third/asio)
include_directories(include/third/asio/detail)
include_directories(include/third/asio/detail/impl)
include_directories(include/third/asio/experimental)
include_directories(include/third/asio/experimental/impl)
include_directories(include/third/asio/generic)
include_directories(include/third/asio/generic/detail)
include_directories(include/third/asio/generic/detail/impl)
include_directories(include/third/asio/impl)
include_directories(include/third/asio/ip)
include_directories(include/third/asio/ip/detail)
include_directories(include/third/asio/ip/detail/impl)
include_directories(include/third/asio/ip/impl)
include_directories(include/third/asio/local)
include_directories(include/third/asio/local/detail)
include_directories(include/third/asio/local/detail/impl)
include_directories(include/third/asio/posix)
include_directories(include/third/asio/ssl)
include_directories(include/third/asio/ssl/detail)
include_directories(include/third/asio/ssl/detail/impl)
include_directories(include/third/asio/ssl/impl)
include_directories(include/third/asio/ts)
include_directories(include/third/asio/windows)
include_directories(include/third/http)
include_directories(include/third/lua)
include_directories(include/third/nlohmann)
include_directories(include/third/snappy)
include_directories(include/third/sol)
include_directories(include/third/spdlog)
include_directories(include/third/spdlog/contrib)
include_directories(include/third/spdlog/contrib/sinks)
include_directories(include/third/spdlog/details)
include_directories(include/third/spdlog/fmt)
include_directories(include/third/spdlog/fmt/bundled)
include_directories(include/third/spdlog/sinks)
include_directories(include/third/timer)
include_directories(include/third/tinyxml)
include_directories(include/thread)
include_directories(include/time)
include_directories(include/utility)
include_directories(src/framework)

add_executable(server_frame
        include/aoi/quad_tree.hpp
        include/aoi/rect.hpp
        include/aoi/scene.h
        include/aoi/vec2.hpp
        include/astar/astar.h
        include/astar/blockallocator.h
        include/config/config.h
        include/config/csvreader.h
        include/crypt/aes.h
        include/crypt/base64.hpp
        include/crypt/blowfish.h
        include/crypt/CRC.h
        include/crypt/mars.h
        include/crypt/md5.h
        include/crypt/net_encrypt.h
        include/crypt/serpent.h
        include/crypt/sha1.h
        include/crypt/url_encode.h
        include/crypt/xor256.h
        include/dbmysql/db_task.h
        include/dbmysql/db_wrap.h
        include/dbmysql/dbmysql.h
        include/dbmysql/sql_join.h
        include/ebus/event_bus.hpp
        include/ebus/frame_event.hpp
        include/file/directory.hpp
        include/file/file.hpp
        include/file/filehelper.h
        include/framework/application.h
        include/fundamental/common.h
        include/fundamental/cyclebuffer.h
        include/fundamental/cyclebuffer_shm.h
        include/fundamental/hashtable.h
        include/fundamental/hashval.h
        include/fundamental/linkcache.h
        include/fundamental/multiprocesshashtable.h
        include/fundamental/ring_buff.h
        include/fundamental/variablehashtable.h
        include/fundamental/variablelengthhashtable.h
        include/helper/bufferStream.h
        include/helper/fileStream.h
        include/helper/helper.h
        include/helper/streamBase.h
        include/helper/stringStream.h
        include/lua_service/lua_bind.h
        include/lua_service/lua_service.h
        include/math/box2.h
        include/math/math_functions.h
        include/math/point2.h
        include/math/point3.h
        include/math/random.hpp
        include/math/rank.h
        include/math/rect.h
        include/memory/ipcutility.h
        include/memory/object_pool.hpp
        include/memory/shm_cache_mgr.h
        include/network/byte_buffer.h
        include/network/message_head.h
        include/network/tcp_callbacks.h
        include/network/tcp_client.h
        include/network/tcp_conn.h
        include/network/tcp_server.h
        include/packet/inner_protobuf_pkg.h
        include/packet/protobuf_handle.h
        include/packet/protobuf_pkg.h
        include/redisclient/impl/pipeline.cpp
        include/redisclient/impl/redisasyncclient.cpp
        include/redisclient/impl/redisclientimpl.cpp
        include/redisclient/impl/redisclientimpl.h
        include/redisclient/impl/redisparser.cpp
        include/redisclient/impl/redissyncclient.cpp
        include/redisclient/impl/redisvalue.cpp
        include/redisclient/impl/throwerror.h
        include/redisclient/config.h
        include/redisclient/pipeline.h
        include/redisclient/redis_client_wrap.h
        include/redisclient/redisasyncclient.h
        include/redisclient/redisbuffer.h
        include/redisclient/redisparser.h
        include/redisclient/redissyncclient.h
        include/redisclient/redisvalue.h
        include/redisclient/version.h
        include/string/string.hpp
        include/string/string_functions.h
        include/string/stringutility.h
        include/third/asio/detail/impl/buffer_sequence_adapter.ipp
        include/third/asio/detail/impl/descriptor_ops.ipp
        include/third/asio/detail/impl/dev_poll_reactor.hpp
        include/third/asio/detail/impl/dev_poll_reactor.ipp
        include/third/asio/detail/impl/epoll_reactor.hpp
        include/third/asio/detail/impl/epoll_reactor.ipp
        include/third/asio/detail/impl/eventfd_select_interrupter.ipp
        include/third/asio/detail/impl/handler_tracking.ipp
        include/third/asio/detail/impl/kqueue_reactor.hpp
        include/third/asio/detail/impl/kqueue_reactor.ipp
        include/third/asio/detail/impl/null_event.ipp
        include/third/asio/detail/impl/pipe_select_interrupter.ipp
        include/third/asio/detail/impl/posix_event.ipp
        include/third/asio/detail/impl/posix_mutex.ipp
        include/third/asio/detail/impl/posix_thread.ipp
        include/third/asio/detail/impl/posix_tss_ptr.ipp
        include/third/asio/detail/impl/reactive_descriptor_service.ipp
        include/third/asio/detail/impl/reactive_serial_port_service.ipp
        include/third/asio/detail/impl/reactive_socket_service_base.ipp
        include/third/asio/detail/impl/resolver_service_base.ipp
        include/third/asio/detail/impl/scheduler.ipp
        include/third/asio/detail/impl/select_reactor.hpp
        include/third/asio/detail/impl/select_reactor.ipp
        include/third/asio/detail/impl/service_registry.hpp
        include/third/asio/detail/impl/service_registry.ipp
        include/third/asio/detail/impl/signal_set_service.ipp
        include/third/asio/detail/impl/socket_ops.ipp
        include/third/asio/detail/impl/socket_select_interrupter.ipp
        include/third/asio/detail/impl/strand_executor_service.hpp
        include/third/asio/detail/impl/strand_executor_service.ipp
        include/third/asio/detail/impl/strand_service.hpp
        include/third/asio/detail/impl/strand_service.ipp
        include/third/asio/detail/impl/throw_error.ipp
        include/third/asio/detail/impl/timer_queue_ptime.ipp
        include/third/asio/detail/impl/timer_queue_set.ipp
        include/third/asio/detail/impl/win_event.ipp
        include/third/asio/detail/impl/win_iocp_handle_service.ipp
        include/third/asio/detail/impl/win_iocp_io_context.hpp
        include/third/asio/detail/impl/win_iocp_io_context.ipp
        include/third/asio/detail/impl/win_iocp_serial_port_service.ipp
        include/third/asio/detail/impl/win_iocp_socket_service_base.ipp
        include/third/asio/detail/impl/win_mutex.ipp
        include/third/asio/detail/impl/win_object_handle_service.ipp
        include/third/asio/detail/impl/win_static_mutex.ipp
        include/third/asio/detail/impl/win_thread.ipp
        include/third/asio/detail/impl/win_tss_ptr.ipp
        include/third/asio/detail/impl/winrt_ssocket_service_base.ipp
        include/third/asio/detail/impl/winrt_timer_scheduler.hpp
        include/third/asio/detail/impl/winrt_timer_scheduler.ipp
        include/third/asio/detail/impl/winsock_init.ipp
        include/third/asio/detail/array.hpp
        include/third/asio/detail/array_fwd.hpp
        include/third/asio/detail/assert.hpp
        include/third/asio/detail/atomic_count.hpp
        include/third/asio/detail/base_from_completion_cond.hpp
        include/third/asio/detail/bind_handler.hpp
        include/third/asio/detail/buffer_resize_guard.hpp
        include/third/asio/detail/buffer_sequence_adapter.hpp
        include/third/asio/detail/buffered_stream_storage.hpp
        include/third/asio/detail/call_stack.hpp
        include/third/asio/detail/chrono.hpp
        include/third/asio/detail/chrono_time_traits.hpp
        include/third/asio/detail/completion_handler.hpp
        include/third/asio/detail/concurrency_hint.hpp
        include/third/asio/detail/conditionally_enabled_event.hpp
        include/third/asio/detail/conditionally_enabled_mutex.hpp
        include/third/asio/detail/config.hpp
        include/third/asio/detail/consuming_buffers.hpp
        include/third/asio/detail/cstddef.hpp
        include/third/asio/detail/cstdint.hpp
        include/third/asio/detail/date_time_fwd.hpp
        include/third/asio/detail/deadline_timer_service.hpp
        include/third/asio/detail/dependent_type.hpp
        include/third/asio/detail/descriptor_ops.hpp
        include/third/asio/detail/descriptor_read_op.hpp
        include/third/asio/detail/descriptor_write_op.hpp
        include/third/asio/detail/dev_poll_reactor.hpp
        include/third/asio/detail/epoll_reactor.hpp
        include/third/asio/detail/event.hpp
        include/third/asio/detail/eventfd_select_interrupter.hpp
        include/third/asio/detail/executor_op.hpp
        include/third/asio/detail/fd_set_adapter.hpp
        include/third/asio/detail/fenced_block.hpp
        include/third/asio/detail/functional.hpp
        include/third/asio/detail/gcc_arm_fenced_block.hpp
        include/third/asio/detail/gcc_hppa_fenced_block.hpp
        include/third/asio/detail/gcc_sync_fenced_block.hpp
        include/third/asio/detail/gcc_x86_fenced_block.hpp
        include/third/asio/detail/global.hpp
        include/third/asio/detail/handler_alloc_helpers.hpp
        include/third/asio/detail/handler_cont_helpers.hpp
        include/third/asio/detail/handler_invoke_helpers.hpp
        include/third/asio/detail/handler_tracking.hpp
        include/third/asio/detail/handler_type_requirements.hpp
        include/third/asio/detail/handler_work.hpp
        include/third/asio/detail/hash_map.hpp
        include/third/asio/detail/io_control.hpp
        include/third/asio/detail/is_buffer_sequence.hpp
        include/third/asio/detail/is_executor.hpp
        include/third/asio/detail/keyword_tss_ptr.hpp
        include/third/asio/detail/kqueue_reactor.hpp
        include/third/asio/detail/limits.hpp
        include/third/asio/detail/local_free_on_block_exit.hpp
        include/third/asio/detail/macos_fenced_block.hpp
        include/third/asio/detail/memory.hpp
        include/third/asio/detail/mutex.hpp
        include/third/asio/detail/noncopyable.hpp
        include/third/asio/detail/null_event.hpp
        include/third/asio/detail/null_fenced_block.hpp
        include/third/asio/detail/null_global.hpp
        include/third/asio/detail/null_mutex.hpp
        include/third/asio/detail/null_reactor.hpp
        include/third/asio/detail/null_signal_blocker.hpp
        include/third/asio/detail/null_socket_service.hpp
        include/third/asio/detail/null_static_mutex.hpp
        include/third/asio/detail/null_thread.hpp
        include/third/asio/detail/null_tss_ptr.hpp
        include/third/asio/detail/object_pool.hpp
        include/third/asio/detail/old_win_sdk_compat.hpp
        include/third/asio/detail/op_queue.hpp
        include/third/asio/detail/operation.hpp
        include/third/asio/detail/pipe_select_interrupter.hpp
        include/third/asio/detail/pop_options.hpp
        include/third/asio/detail/posix_event.hpp
        include/third/asio/detail/posix_fd_set_adapter.hpp
        include/third/asio/detail/posix_global.hpp
        include/third/asio/detail/posix_mutex.hpp
        include/third/asio/detail/posix_signal_blocker.hpp
        include/third/asio/detail/posix_static_mutex.hpp
        include/third/asio/detail/posix_thread.hpp
        include/third/asio/detail/posix_tss_ptr.hpp
        include/third/asio/detail/push_options.hpp
        include/third/asio/detail/reactive_descriptor_service.hpp
        include/third/asio/detail/reactive_null_buffers_op.hpp
        include/third/asio/detail/reactive_serial_port_service.hpp
        include/third/asio/detail/reactive_socket_accept_op.hpp
        include/third/asio/detail/reactive_socket_connect_op.hpp
        include/third/asio/detail/reactive_socket_recv_op.hpp
        include/third/asio/detail/reactive_socket_recvfrom_op.hpp
        include/third/asio/detail/reactive_socket_recvmsg_op.hpp
        include/third/asio/detail/reactive_socket_send_op.hpp
        include/third/asio/detail/reactive_socket_sendto_op.hpp
        include/third/asio/detail/reactive_socket_service.hpp
        include/third/asio/detail/reactive_socket_service_base.hpp
        include/third/asio/detail/reactive_wait_op.hpp
        include/third/asio/detail/reactor.hpp
        include/third/asio/detail/reactor_fwd.hpp
        include/third/asio/detail/reactor_op.hpp
        include/third/asio/detail/reactor_op_queue.hpp
        include/third/asio/detail/recycling_allocator.hpp
        include/third/asio/detail/regex_fwd.hpp
        include/third/asio/detail/resolve_endpoint_op.hpp
        include/third/asio/detail/resolve_op.hpp
        include/third/asio/detail/resolve_query_op.hpp
        include/third/asio/detail/resolver_service.hpp
        include/third/asio/detail/resolver_service_base.hpp
        include/third/asio/detail/scheduler.hpp
        include/third/asio/detail/scheduler_operation.hpp
        include/third/asio/detail/scheduler_thread_info.hpp
        include/third/asio/detail/scoped_lock.hpp
        include/third/asio/detail/scoped_ptr.hpp
        include/third/asio/detail/select_interrupter.hpp
        include/third/asio/detail/select_reactor.hpp
        include/third/asio/detail/service_registry.hpp
        include/third/asio/detail/signal_blocker.hpp
        include/third/asio/detail/signal_handler.hpp
        include/third/asio/detail/signal_init.hpp
        include/third/asio/detail/signal_op.hpp
        include/third/asio/detail/signal_set_service.hpp
        include/third/asio/detail/socket_holder.hpp
        include/third/asio/detail/socket_ops.hpp
        include/third/asio/detail/socket_option.hpp
        include/third/asio/detail/socket_select_interrupter.hpp
        include/third/asio/detail/socket_types.hpp
        include/third/asio/detail/solaris_fenced_block.hpp
        include/third/asio/detail/static_mutex.hpp
        include/third/asio/detail/std_event.hpp
        include/third/asio/detail/std_fenced_block.hpp
        include/third/asio/detail/std_global.hpp
        include/third/asio/detail/std_mutex.hpp
        include/third/asio/detail/std_static_mutex.hpp
        include/third/asio/detail/std_thread.hpp
        include/third/asio/detail/strand_executor_service.hpp
        include/third/asio/detail/strand_service.hpp
        include/third/asio/detail/string_view.hpp
        include/third/asio/detail/thread.hpp
        include/third/asio/detail/thread_context.hpp
        include/third/asio/detail/thread_group.hpp
        include/third/asio/detail/thread_info_base.hpp
        include/third/asio/detail/throw_error.hpp
        include/third/asio/detail/throw_exception.hpp
        include/third/asio/detail/timer_queue.hpp
        include/third/asio/detail/timer_queue_base.hpp
        include/third/asio/detail/timer_queue_ptime.hpp
        include/third/asio/detail/timer_queue_set.hpp
        include/third/asio/detail/timer_scheduler.hpp
        include/third/asio/detail/timer_scheduler_fwd.hpp
        include/third/asio/detail/tss_ptr.hpp
        include/third/asio/detail/type_traits.hpp
        include/third/asio/detail/variadic_templates.hpp
        include/third/asio/detail/wait_handler.hpp
        include/third/asio/detail/wait_op.hpp
        include/third/asio/detail/win_event.hpp
        include/third/asio/detail/win_fd_set_adapter.hpp
        include/third/asio/detail/win_fenced_block.hpp
        include/third/asio/detail/win_global.hpp
        include/third/asio/detail/win_iocp_handle_read_op.hpp
        include/third/asio/detail/win_iocp_handle_service.hpp
        include/third/asio/detail/win_iocp_handle_write_op.hpp
        include/third/asio/detail/win_iocp_io_context.hpp
        include/third/asio/detail/win_iocp_null_buffers_op.hpp
        include/third/asio/detail/win_iocp_operation.hpp
        include/third/asio/detail/win_iocp_overlapped_op.hpp
        include/third/asio/detail/win_iocp_overlapped_ptr.hpp
        include/third/asio/detail/win_iocp_serial_port_service.hpp
        include/third/asio/detail/win_iocp_socket_accept_op.hpp
        include/third/asio/detail/win_iocp_socket_connect_op.hpp
        include/third/asio/detail/win_iocp_socket_recv_op.hpp
        include/third/asio/detail/win_iocp_socket_recvfrom_op.hpp
        include/third/asio/detail/win_iocp_socket_recvmsg_op.hpp
        include/third/asio/detail/win_iocp_socket_send_op.hpp
        include/third/asio/detail/win_iocp_socket_service.hpp
        include/third/asio/detail/win_iocp_socket_service_base.hpp
        include/third/asio/detail/win_iocp_thread_info.hpp
        include/third/asio/detail/win_iocp_wait_op.hpp
        include/third/asio/detail/win_mutex.hpp
        include/third/asio/detail/win_object_handle_service.hpp
        include/third/asio/detail/win_static_mutex.hpp
        include/third/asio/detail/win_thread.hpp
        include/third/asio/detail/win_tss_ptr.hpp
        include/third/asio/detail/winapp_thread.hpp
        include/third/asio/detail/wince_thread.hpp
        include/third/asio/detail/winrt_async_manager.hpp
        include/third/asio/detail/winrt_async_op.hpp
        include/third/asio/detail/winrt_resolve_op.hpp
        include/third/asio/detail/winrt_resolver_service.hpp
        include/third/asio/detail/winrt_socket_connect_op.hpp
        include/third/asio/detail/winrt_socket_recv_op.hpp
        include/third/asio/detail/winrt_socket_send_op.hpp
        include/third/asio/detail/winrt_ssocket_service.hpp
        include/third/asio/detail/winrt_ssocket_service_base.hpp
        include/third/asio/detail/winrt_timer_scheduler.hpp
        include/third/asio/detail/winrt_utils.hpp
        include/third/asio/detail/winsock_init.hpp
        include/third/asio/detail/work_dispatcher.hpp
        include/third/asio/detail/wrapped_handler.hpp
        include/third/asio/experimental/impl/co_spawn.hpp
        include/third/asio/experimental/impl/detached.hpp
        include/third/asio/experimental/impl/redirect_error.hpp
        include/third/asio/experimental/co_spawn.hpp
        include/third/asio/experimental/detached.hpp
        include/third/asio/experimental/redirect_error.hpp
        include/third/asio/generic/detail/impl/endpoint.ipp
        include/third/asio/generic/detail/endpoint.hpp
        include/third/asio/generic/basic_endpoint.hpp
        include/third/asio/generic/datagram_protocol.hpp
        include/third/asio/generic/raw_protocol.hpp
        include/third/asio/generic/seq_packet_protocol.hpp
        include/third/asio/generic/stream_protocol.hpp
        include/third/asio/impl/buffered_read_stream.hpp
        include/third/asio/impl/buffered_write_stream.hpp
        include/third/asio/impl/connect.hpp
        include/third/asio/impl/defer.hpp
        include/third/asio/impl/dispatch.hpp
        include/third/asio/impl/error.ipp
        include/third/asio/impl/error_code.ipp
        include/third/asio/impl/execution_context.hpp
        include/third/asio/impl/execution_context.ipp
        include/third/asio/impl/executor.hpp
        include/third/asio/impl/executor.ipp
        include/third/asio/impl/handler_alloc_hook.ipp
        include/third/asio/impl/io_context.hpp
        include/third/asio/impl/io_context.ipp
        include/third/asio/impl/post.hpp
        include/third/asio/impl/read.hpp
        include/third/asio/impl/read_at.hpp
        include/third/asio/impl/read_until.hpp
        include/third/asio/impl/serial_port_base.hpp
        include/third/asio/impl/serial_port_base.ipp
        include/third/asio/impl/spawn.hpp
        include/third/asio/impl/src.cpp
        include/third/asio/impl/src.hpp
        include/third/asio/impl/system_context.hpp
        include/third/asio/impl/system_context.ipp
        include/third/asio/impl/system_executor.hpp
        include/third/asio/impl/thread_pool.hpp
        include/third/asio/impl/thread_pool.ipp
        include/third/asio/impl/use_future.hpp
        include/third/asio/impl/write.hpp
        include/third/asio/impl/write_at.hpp
        include/third/asio/ip/detail/impl/endpoint.ipp
        include/third/asio/ip/detail/endpoint.hpp
        include/third/asio/ip/detail/socket_option.hpp
        include/third/asio/ip/impl/address.hpp
        include/third/asio/ip/impl/address.ipp
        include/third/asio/ip/impl/address_v4.hpp
        include/third/asio/ip/impl/address_v4.ipp
        include/third/asio/ip/impl/address_v6.hpp
        include/third/asio/ip/impl/address_v6.ipp
        include/third/asio/ip/impl/basic_endpoint.hpp
        include/third/asio/ip/impl/host_name.ipp
        include/third/asio/ip/impl/network_v4.hpp
        include/third/asio/ip/impl/network_v4.ipp
        include/third/asio/ip/impl/network_v6.hpp
        include/third/asio/ip/impl/network_v6.ipp
        include/third/asio/ip/address.hpp
        include/third/asio/ip/address_v4.hpp
        include/third/asio/ip/address_v4_iterator.hpp
        include/third/asio/ip/address_v4_range.hpp
        include/third/asio/ip/address_v6.hpp
        include/third/asio/ip/address_v6_iterator.hpp
        include/third/asio/ip/address_v6_range.hpp
        include/third/asio/ip/bad_address_cast.hpp
        include/third/asio/ip/basic_endpoint.hpp
        include/third/asio/ip/basic_resolver.hpp
        include/third/asio/ip/basic_resolver_entry.hpp
        include/third/asio/ip/basic_resolver_iterator.hpp
        include/third/asio/ip/basic_resolver_query.hpp
        include/third/asio/ip/basic_resolver_results.hpp
        include/third/asio/ip/host_name.hpp
        include/third/asio/ip/icmp.hpp
        include/third/asio/ip/multicast.hpp
        include/third/asio/ip/network_v4.hpp
        include/third/asio/ip/network_v6.hpp
        include/third/asio/ip/resolver_base.hpp
        include/third/asio/ip/resolver_query_base.hpp
        include/third/asio/ip/resolver_service.hpp
        include/third/asio/ip/tcp.hpp
        include/third/asio/ip/udp.hpp
        include/third/asio/ip/unicast.hpp
        include/third/asio/ip/v6_only.hpp
        include/third/asio/local/detail/impl/endpoint.ipp
        include/third/asio/local/detail/endpoint.hpp
        include/third/asio/local/basic_endpoint.hpp
        include/third/asio/local/connect_pair.hpp
        include/third/asio/local/datagram_protocol.hpp
        include/third/asio/local/stream_protocol.hpp
        include/third/asio/posix/basic_descriptor.hpp
        include/third/asio/posix/basic_stream_descriptor.hpp
        include/third/asio/posix/descriptor.hpp
        include/third/asio/posix/descriptor_base.hpp
        include/third/asio/posix/stream_descriptor.hpp
        include/third/asio/posix/stream_descriptor_service.hpp
        include/third/asio/ssl/detail/impl/engine.ipp
        include/third/asio/ssl/detail/impl/openssl_init.ipp
        include/third/asio/ssl/detail/buffered_handshake_op.hpp
        include/third/asio/ssl/detail/engine.hpp
        include/third/asio/ssl/detail/handshake_op.hpp
        include/third/asio/ssl/detail/io.hpp
        include/third/asio/ssl/detail/openssl_init.hpp
        include/third/asio/ssl/detail/openssl_types.hpp
        include/third/asio/ssl/detail/password_callback.hpp
        include/third/asio/ssl/detail/read_op.hpp
        include/third/asio/ssl/detail/shutdown_op.hpp
        include/third/asio/ssl/detail/stream_core.hpp
        include/third/asio/ssl/detail/verify_callback.hpp
        include/third/asio/ssl/detail/write_op.hpp
        include/third/asio/ssl/impl/context.hpp
        include/third/asio/ssl/impl/context.ipp
        include/third/asio/ssl/impl/error.ipp
        include/third/asio/ssl/impl/rfc2818_verification.ipp
        include/third/asio/ssl/impl/src.hpp
        include/third/asio/ssl/context.hpp
        include/third/asio/ssl/context_base.hpp
        include/third/asio/ssl/error.hpp
        include/third/asio/ssl/rfc2818_verification.hpp
        include/third/asio/ssl/stream.hpp
        include/third/asio/ssl/stream_base.hpp
        include/third/asio/ssl/verify_context.hpp
        include/third/asio/ssl/verify_mode.hpp
        include/third/asio/ts/buffer.hpp
        include/third/asio/ts/executor.hpp
        include/third/asio/ts/internet.hpp
        include/third/asio/ts/io_context.hpp
        include/third/asio/ts/net.hpp
        include/third/asio/ts/netfwd.hpp
        include/third/asio/ts/socket.hpp
        include/third/asio/ts/timer.hpp
        include/third/asio/windows/basic_handle.hpp
        include/third/asio/windows/basic_object_handle.hpp
        include/third/asio/windows/basic_random_access_handle.hpp
        include/third/asio/windows/basic_stream_handle.hpp
        include/third/asio/windows/object_handle.hpp
        include/third/asio/windows/object_handle_service.hpp
        include/third/asio/windows/overlapped_handle.hpp
        include/third/asio/windows/overlapped_ptr.hpp
        include/third/asio/windows/random_access_handle.hpp
        include/third/asio/windows/random_access_handle_service.hpp
        include/third/asio/windows/stream_handle.hpp
        include/third/asio/windows/stream_handle_service.hpp
        include/third/asio/associated_allocator.hpp
        include/third/asio/associated_executor.hpp
        include/third/asio/async_result.hpp
        include/third/asio/basic_datagram_socket.hpp
        include/third/asio/basic_deadline_timer.hpp
        include/third/asio/basic_io_object.hpp
        include/third/asio/basic_raw_socket.hpp
        include/third/asio/basic_seq_packet_socket.hpp
        include/third/asio/basic_serial_port.hpp
        include/third/asio/basic_signal_set.hpp
        include/third/asio/basic_socket.hpp
        include/third/asio/basic_socket_acceptor.hpp
        include/third/asio/basic_socket_iostream.hpp
        include/third/asio/basic_socket_streambuf.hpp
        include/third/asio/basic_stream_socket.hpp
        include/third/asio/basic_streambuf.hpp
        include/third/asio/basic_streambuf_fwd.hpp
        include/third/asio/basic_waitable_timer.hpp
        include/third/asio/bind_executor.hpp
        include/third/asio/buffer.hpp
        include/third/asio/buffered_read_stream.hpp
        include/third/asio/buffered_read_stream_fwd.hpp
        include/third/asio/buffered_stream.hpp
        include/third/asio/buffered_stream_fwd.hpp
        include/third/asio/buffered_write_stream.hpp
        include/third/asio/buffered_write_stream_fwd.hpp
        include/third/asio/buffers_iterator.hpp
        include/third/asio/completion_condition.hpp
        include/third/asio/connect.hpp
        include/third/asio/coroutine.hpp
        include/third/asio/datagram_socket_service.hpp
        include/third/asio/deadline_timer.hpp
        include/third/asio/deadline_timer_service.hpp
        include/third/asio/defer.hpp
        include/third/asio/dispatch.hpp
        include/third/asio/error.hpp
        include/third/asio/error_code.hpp
        include/third/asio/execution_context.hpp
        include/third/asio/executor.hpp
        include/third/asio/executor_work_guard.hpp
        include/third/asio/experimental.hpp
        include/third/asio/handler_alloc_hook.hpp
        include/third/asio/handler_continuation_hook.hpp
        include/third/asio/handler_invoke_hook.hpp
        include/third/asio/handler_type.hpp
        include/third/asio/high_resolution_timer.hpp
        include/third/asio/io_context.hpp
        include/third/asio/io_context_strand.hpp
        include/third/asio/io_service.hpp
        include/third/asio/io_service_strand.hpp
        include/third/asio/is_executor.hpp
        include/third/asio/is_read_buffered.hpp
        include/third/asio/is_write_buffered.hpp
        include/third/asio/packaged_task.hpp
        include/third/asio/placeholders.hpp
        include/third/asio/post.hpp
        include/third/asio/raw_socket_service.hpp
        include/third/asio/read.hpp
        include/third/asio/read_at.hpp
        include/third/asio/read_until.hpp
        include/third/asio/seq_packet_socket_service.hpp
        include/third/asio/serial_port.hpp
        include/third/asio/serial_port_base.hpp
        include/third/asio/serial_port_service.hpp
        include/third/asio/signal_set.hpp
        include/third/asio/signal_set_service.hpp
        include/third/asio/socket_acceptor_service.hpp
        include/third/asio/socket_base.hpp
        include/third/asio/spawn.hpp
        include/third/asio/ssl.hpp
        include/third/asio/steady_timer.hpp
        include/third/asio/strand.hpp
        include/third/asio/stream_socket_service.hpp
        include/third/asio/streambuf.hpp
        include/third/asio/system_context.hpp
        include/third/asio/system_error.hpp
        include/third/asio/system_executor.hpp
        include/third/asio/system_timer.hpp
        include/third/asio/thread.hpp
        include/third/asio/thread_pool.hpp
        include/third/asio/time_traits.hpp
        include/third/asio/unyield.hpp
        include/third/asio/use_future.hpp
        include/third/asio/uses_executor.hpp
        include/third/asio/version.hpp
        include/third/asio/wait_traits.hpp
        include/third/asio/waitable_timer_service.hpp
        include/third/asio/write.hpp
        include/third/asio/write_at.hpp
        include/third/asio/yield.hpp
        include/third/http/httplib.h
        include/third/lua/lauxlib.h
        include/third/lua/lua.h
        include/third/lua/lua.hpp
        include/third/lua/luaconf.h
        include/third/lua/lualib.h
        include/third/nlohmann/json.hpp
        include/third/nlohmann/json_wrap.h
        include/third/snappy/snappy-c.h
        include/third/snappy/snappy-sinksource.h
        include/third/snappy/snappy-stubs-public.h
        include/third/snappy/snappy.h
        include/third/sol/forward.hpp
        include/third/sol/sol.hpp
        include/third/spdlog/contrib/sinks/step_file_sink.h
        include/third/spdlog/details/async_log_helper.h
        include/third/spdlog/details/async_logger_impl.h
        include/third/spdlog/details/file_helper.h
        include/third/spdlog/details/log_msg.h
        include/third/spdlog/details/logger_impl.h
        include/third/spdlog/details/mpmc_blocking_q.h
        include/third/spdlog/details/null_mutex.h
        include/third/spdlog/details/os.h
        include/third/spdlog/details/pattern_formatter_impl.h
        include/third/spdlog/details/registry.h
        include/third/spdlog/details/spdlog_impl.h
        include/third/spdlog/fmt/bundled/format.cc
        include/third/spdlog/fmt/bundled/format.h
        include/third/spdlog/fmt/bundled/ostream.cc
        include/third/spdlog/fmt/bundled/ostream.h
        include/third/spdlog/fmt/bundled/posix.cc
        include/third/spdlog/fmt/bundled/posix.h
        include/third/spdlog/fmt/bundled/printf.cc
        include/third/spdlog/fmt/bundled/printf.h
        include/third/spdlog/fmt/bundled/time.h
        include/third/spdlog/fmt/fmt.h
        include/third/spdlog/fmt/ostr.h
        include/third/spdlog/sinks/android_sink.h
        include/third/spdlog/sinks/ansicolor_sink.h
        include/third/spdlog/sinks/base_sink.h
        include/third/spdlog/sinks/dist_sink.h
        include/third/spdlog/sinks/file_sinks.h
        include/third/spdlog/sinks/msvc_sink.h
        include/third/spdlog/sinks/null_sink.h
        include/third/spdlog/sinks/ostream_sink.h
        include/third/spdlog/sinks/sink.h
        include/third/spdlog/sinks/stdout_sinks.h
        include/third/spdlog/sinks/syslog_sink.h
        include/third/spdlog/sinks/wincolor_sink.h
        include/third/spdlog/sinks/windebug_sink.h
        include/third/spdlog/async_logger.h
        include/third/spdlog/common.h
        include/third/spdlog/formatter.h
        include/third/spdlog/logger.h
        include/third/spdlog/spdlog.h
        include/third/spdlog/tweakme.h
        include/third/timer/timer_wheel.h
        include/third/tinyxml/tinyxml2.h
        include/third/asio.hpp
        include/thread/locked_queue.h
        include/thread/rwlock.hpp
        include/thread/spinlock.hpp
        include/thread/thread_pool.h
        include/time/cooling.h
        include/time/time.hpp
        include/utility/basic_functions.h
        include/utility/basic_types.h
        include/utility/comm_macro.h
        include/utility/noncopyable.hpp
        include/utility/profile_manager.h
        include/utility/puid.hpp
        include/utility/singleton.h
        include/svrlib.h
        src/astar/astar.cpp
        src/astar/blockallocator.cpp
        src/config/csvreader.cpp
        src/crypt/aes.cpp
        src/crypt/blowFish.cpp
        src/crypt/mars.cpp
        src/crypt/md5.cpp
        src/crypt/net_encrypt.cpp
        src/crypt/serpent.cpp
        src/crypt/sha1.cc
        src/crypt/url_encode.cpp
        src/dbmysql/db_task.cpp
        src/dbmysql/db_wrap.cpp
        src/dbmysql/dbmysql.cpp
        src/dbmysql/dbmysql_exception.cpp
        src/dbmysql/dbmysql_result.cpp
        src/dbmysql/dbmysql_statement.cpp
        src/dbmysql/dbmysql_transaction.cpp
        src/dbmysql/test_client.cpp
        src/ebus/event_bus.cpp
        src/framework/cmdline.h
        src/framework/exception.cpp
        src/framework/framework.cpp
        src/framework/framework.h
        src/framework/frameworkmain.cpp
        src/helper/bufferStream.cpp
        src/helper/filehelper.cpp
        src/helper/fileStream.cpp
        src/helper/helper.cpp
        src/helper/streamBase.cpp
        src/helper/stringStream.cpp
        src/lua_service/lua_bind.cpp
        src/lua_service/lua_service.cpp
        src/math/math_functions.cpp
        src/memory/ipcutility.cpp
        src/modern/json_wrap.cpp
        src/network/tcp_callbacks.cpp
        src/network/tcp_client.cc
        src/network/tcp_conn.cc
        src/network/tcp_server.cc
        src/redisclient/redis_client_wrap.cpp
        src/string/string_functions.cpp
        src/string/stringutility.cpp
        src/third/tinyxml/tinyxml2.cpp
        src/time/cooling.cpp
        src/utility/basic_functions.cpp
        src/utility/profile_manager.cpp include/thread/sync_queue.hpp)
